Updated DB config. Added get account swagger doc.
